Enhanced AVH skin to have a BS responsive header (still an issue on iphone/ipads though).
git-svn-id: http://ala-hubs.googlecode.com/svn/trunk/hubs-webapp@1074 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/avh2012/contentbox.css
+++ b/src/main/webapp/css/avh2012/contentbox.css
@@ -52,7 +52,7 @@
     height: 100px;
     background-position: 13px;
     margin-top: 20px;
-	margin-left: -20px;
+	/*margin-left: -20px;*/
 }
 
 /*#content2 {*/
