--- a/src/main/webapp/css/avh2012/style.css
+++ b/src/main/webapp/css/avh2012/style.css
@@ -12,10 +12,10 @@ Version: 0.1
 
 /*@import url("twentyeleven.css");*/
 @import url("widget.css");
-@import url("reset.css");
+/*@import url("reset.css");*/
 @import url("style-common.css");
 
-@import url("navigation.css");
+/*@import url("navigation.css");*/
 @import url("featurebox.css");
 @import url("contentbox.css");
 @import url("hp-contentbox.css");
@@ -25,6 +25,7 @@ Version: 0.1
 html, body {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffffff;
 }
 
 /*-------------------------------------------------------------
@@ -32,7 +33,8 @@ html, body {
 -------------------------------------------------------------*/
 
 body {
-    padding: 0; /* overrides style.css in Twenty Eleven theme */
+    /*padding: 0; *//* overrides style.css in Twenty Eleven theme */
+    font-size: 100%;
 }
 
 body.page #primary {
@@ -100,21 +102,6 @@ article#post-93 {
 /*------------------------------------------------
 ----------------- Login --------------------------
 ------------------------------------------------*/
-
-div.rightMenu {
-    padding-top: 120px;
-    /*padding-right: 93px;*/
-    text-align: right;
-    width: 982px;
-    color: #ffffff;
-}
-
-div.rightMenu a {
-    color: #ffffff;
-}
-
-
-
 
 .news_content h3 {
     color: #666;
@@ -359,4 +346,130 @@ div#clubView {
 
 .btn-group > .btn + .btn {
     margin-left: -5px;
+}
+
+/* BS changes to banner */
+.navbarFullWidth {
+    background-repeat: repeat-x;
+    background-image: url("images/header-background.png");
+    background-position: 0% 100%;
+    height: 194px;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+.navbar.navbar-static-top  {
+    min-height: 40px;
+    background-image: url("images/n-bg.jpg");
+    background-repeat: repeat-x;
+    border-bottom: 1px solid #d4d4d4;
+}
+.navbar-inner {
+    min-height: 40px;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: inherit;
+    background-image: inherit;
+    background-repeat: repeat-x;
+    filter: none;
+    border: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0x;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    *zoom: 1;
+}
+.navbar .nav {
+    margin: 0;
+    display: table;
+    width: 100%;
+    background-color: #fafafa;
+    background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
+    background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
+    background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
+    background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
+    background-image: url("images/n-bg.jpg");
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
+    border: none;
+    *zoom: 1;
+}
+.navbar .nav li {
+    display: table-cell;
+    width: 1%;
+    float: none;
+    background-image: url(images/n-sep.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.navbar .nav li a {
+    font-weight: normal;
+    text-align: center;
+    /*border-left: 1px solid rgba(255,255,255,.75);*/
+    /*border-right: 1px solid rgba(0,0,0,.1);*/
+    white-space: nowrap;
+    color: #666666; /*#0c6fb5;*/
+    text-decoration: none;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 16px;
+    padding: 15px;
+}
+.navbar .nav li:first-child a {
+    border-left: 0;
+    margin-left: 0;
+    background-image: url(images/n-sep.jpg);
+    background-repeat: no-repeat;
+    background-position: left;
+    /*border-radius: 3px 0 0 3px;*/
+}
+.navbar .nav li:last-child a {
+    border-right: 0;
+    margin-right: 0;
+    /*border-radius: 0 3px 3px 0;*/
+}
+/*.navbar .nav > li > a {*/
+    /*padding: 15px;*/
+    /*display: block;*/
+    /*color: #666666; *//*#0c6fb5;*/
+    /*text-decoration: none;*/
+    /*height: 33px;*/
+    /*padding: 15px;*/
+    /*text-align: center;*/
+    /*line-height: 175%;*/
+/*}*/
+
+.navbar .nav li a:hover {
+    color: #FFF;
+    text-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    background-color:  #a2a2a2;
+    background-image: -moz-linear-gradient(100% 100% 90deg, #696969, #a2a2a2);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#a2a2a2), to(#696969));
+}
+
+#avhLogoRow {
+    padding: 18px 10px 10px 10px;
+}
+
+div#rightMenu {
+    padding-top: 100px;
+    padding-right: 20px;
+    /*padding-right: 93px;*/
+    text-align: right;
+    /*width: 982px;*/
+    color: #ffffff;
+}
+
+div#rightMenu a {
+    color: #ffffff;
+    font-size: 13px;
+}
+
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus {
+    background-color: #ffffff;
 }
